<resources>
    <string name="app_name">Practica04</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_text">Test text</string>
    <string name="splash_title">Juegos</string>
    <string name="gamesToolbarListTitle">Juegos</string>
    <string name="gamesFragmentBtnIdOrderDescription">Boton de ordenacion por numero de id</string>
    <string name="gamesFragmentBtnAlphabetOrderDescription">Boton de ordenacion por orden alfabetico</string>
    <string name="gamesFragmentBtnPlatformOrderDescription">Boton de ordenacion por plataforma</string>
    <string name="gamesFragmentBtnAddDescription">Icono de agregar juego nuevo</string>
    <string name="order_dialog_filter_title">Filtrar</string>
    <string name="order_dialog_button_cancel_description">Boton para cancelar el dialogo</string>
    <string name="order_dialog_button_accept">Aceptar</string>
    <string name="order_dialog_label_button_playstation">PlayStation</string>
    <string name="order_dialog_label_button_xbox">Xbox</string>
    <string name="order_dialog_label_button_nintendo">Nintendo</string>
    <string name="order_dialog_label_button_all_platform">Todas</string>
    <string name="addGameFragmentBtnBack_content_description">Boton que vuelve hacia la pantalla de juegos</string>
    <string name="addGameFragmentLabelNewGame">Nuevo Juego</string>
    <string name="addGameFragmentLabelName">Nombre</string>
    <string name="addGameFragmentInputNameHint">Nombre</string>
    <string name="addGameFragmentInputStudioHint">Estudio</string>
    <string name="addGameFragmentLabelDate">Lanzamiento</string>
    <string name="addGameFragmentInputDateHint">dd/mm/aaaa</string>
    <string name="addGameFragmentLabelCover">Portada</string>
    <string name="addGameFragmentInputCoverHint">https://urlGame.com/coverimage.png</string>
    <string name="addGameFragmentLabelPlatform">Plataforma</string>
    <string name="addGameFragmentLabelPegi">Pegi</string>
    <string name="addGameFragmentBtnPegiDescription">Boton selección de pegi</string>
    <string name="addGameFragmentBtnXboxDescription">Boton para seleccionar la plataforma de xbox</string>
    <string name="addGameFragmentBtnPlayStationDescription">Boton de selección de la plataforma PlayStation</string>
    <string name="addGameFragmentBtnNintendoDescription">Boton de selección de la plataforma Nintendo</string>
    <string name="addGameFragmentNameError">Ingrese un nombre</string>
    <string name="addGameFragmentStudioError">Ingrese un estudio</string>
    <string name="addGameFragmentDateErrorEmpty">Ingrese una fecha</string>
    <string name="addGameFragmentDateErrorFormat">Formato de fecha incorrecto (dd/mm/yyyy)</string>
    <string name="addGameFragmentCoverError">Ingrese una cubierta</string>
    <string name="delete_confirmation_message">Estas seguro de que quieres eliminar %s</string>
    <string name="deleted_game">Juego eliminado</string>
    <string name="undo_text">Deshacer</string>
    <string name="argument_studioname">studioName</string>
    <string name="not_found">Not Found</string>
    <string name="userPreferencesFragmentLabelTitle">Preferencias</string>
</resources>